<resources>
    <string name="app_name">Jera</string>
    <string name="coffee">Coffee</string>
    <string name="tea">Tea</string>
    <string name="title_equipment">Equipment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_cart">Cart</string>
    <string name="out_of_stock">Out of stock</string>
    <string name="in_stock">In Stock</string>
    <string name="money_symbol_with_string">₪%1$s</string>
    <string name="money_symbol_with_pay_text">Pay ₪%1$s</string>
    <string name="grind_type">Grind Type</string>
    <string name="quantity_init">1</string>
    <string name="beans">Beans</string>
    <string name="bag_size">250 grams bags</string>
    <string name="bitterness_label">Bitterness:</string>
    <string name="acidity_label">Acidity:</string>
    <string name="sweetness_label">Sweetness:</string>
    <string name="body_label">Body:</string>
    <string name="taste_profile_label">Taste Profile -</string>
    <string name="country_of_origin_label">Country Of Origin -</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="go_back">Go back</string>
    <string name="choose">Choose</string>
    <string name="weight">Weight</string>
    <string name="amount">Amount</string>
    <string name="product_image">Product image</string>
    <string name="login_to_check_out_message">To proceed to checkout please log in</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="orders">Orders</string>
    <string name="delete_item">Delete Item</string>
    <string name="cancel">Cancel</string>
    <string name="required">*Required</string>
    <string name="missed_a_field_message">You may missed something, check again</string>
    <string name="register_successfully_message">Register successfully </string>
    <string name="login_successfully_message">Welcome Back</string>
    <string name="added_to_cart_message">Added</string>
    <string name="no_tea_chosen_message">Choose Tea</string>
    <string name="invalid_quantity_message">"Invalid Quantity"</string>
    <string name="out_of_stock_message">Out Of Stock</string>
    <string name="continue_shopping_dialog">Do you want to continue Shopping?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_delivery_option_chosen_message">Choose delivery option</string>
    <string name="phone_number_now_valid_message">Enter a valid phone number</string>
    <string name="no_pickup_location_chosen_message">Choose pickup location</string>
    <string name="empty_field_message">Fill all required fields</string>
    <string name="invalid_number">Invalid number</string>
    <string name="choose_phone_prefix">Choose phone prefix</string>
    <string name="email_address_not_valid">Not a valid address</string>
    <string name="password_to_short">Must be minimum of 8 characters</string>
    <string name="no_digits_of_letters">Must contain digits and letters</string>
    <string name="passwords_do_not_match">Passwords don\'t match</string>
    <string name="use_this_address">Use This Address</string>
    <string name="add_new_address">Add new address</string>
    <string name="delete_item_dialog">Are you sure you want to delete this item?</string>
    <string name="delete">Delete</string>
    <string name="title_profile">Profile</string>
    <string name="pick_up_location">Pick Up Location</string>
    <string name="self_pickup">Self Pickup</string>
    <string name="delivery">Delivery</string>
    <string name="entrance_label">Entrance:</string>
    <string name="floor_label">Floor:</string>
    <string name="apt_label">Apt:</string>
    <string name="use_default_address">Use Default Address</string>
    <string name="items">items</string>
    <string name="add_address">Add Address</string>
    <string name="city">City</string>
    <string name="street_name">Street Name</string>
    <string name="house_number">House Number</string>
    <string name="zip_code">Zip Code</string>
    <string name="floor">floor</string>
    <string name="apt">Apt</string>
    <string name="entrance">Entrance</string>
    <string name="use_this_address_as_default">Use this address as default</string>
    <string name="you_can_almost_smell_the_coffee">You can almost smell the coffee</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_type_password">Re Type Password</string>
    <string name="register_all_caps">REGISTER</string>
    <string name="register">Register</string>
    <string name="holder">holder</string>
    <string name="log_me_in">LOG ME IN!</string>
    <string name="not_register_yet_click_on_me">Not Register Yet? Click On Me!</string>
    <string name="phone_number">Phone Number</string>
    <string name="pay">Pay</string>
    <string name="go_to_payment">Go To Payment</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="total_price">Total Price</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="we_will_keep_your_data_safe">We will keep your data safe!</string>
    <string name="_05">05</string>
    <string name="qty">Qty</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="check_out">Check Out</string>
    <string name="signed_out">Signed out</string>
    <string name="tea_brew">tea brew</string>
    <string name="tea_bag">tea bags</string>
    <string name="check_again_message">Something is wrong, check again</string>
    <string name="processing_order">Processing Order</string>
    <string name="just_a_few_seconds_please">Just a few seconds please"</string>
    <string name="no_internet_dialog">It seems you don\'t have internet connection…</string>
    <string name="go_to_settings">Go To Settings</string>
    <string name="check_out_item_image">check out item image</string>
    <string name="reload">Reload</string>
    <string name="connect_to_internet_message">Please Connect To The Internet</string>
    <string name="email_or_password_incorrect_message">Email or Password is incorrect</string>
    <string name="no_orders_found">No Orders Found</string>
    <string name="date_of_order">Date Of Order:</string>
    <string name="status">Status:</string>
    <string name="price">Price:</string>
    <string name="string_with_colon">%1$s:</string>
    <string name="string_with_street">%1$s street</string>
    <string name="order_id">Order ID:</string>
    <string name="espresso">Espresso</string>
    <string name="moka_pot">Moka Pot</string>
    <string name="filter">Filter</string>
    <string name="french_press">French Press</string>
    <string name="weight_symbol">%1$sg</string>
    <string name="shows_a_delete_pop_up">shows a delete pop up</string>
    <string name="go_to_cart">go to cart</string>
    <string name="init_cart_badge_value">0</string>
    <string name="user_exists_message">User already exists</string>
    <string name="order_could_not_complete_message">Oops, it seems there is a problem</string>


</resources>