<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/cart_button"
        android:orderInCategory="2"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        app:showAsAction="always"
        android:actionLayout="@layout/layout_toolbar_cart_icon"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/profile_button"
        android:orderInCategory="1"
        android:icon="@drawable/ic_baseline_person_24"
        app:showAsAction="always"
        android:title="@string/title_profile">
        <menu>
            <item
                android:id="@+id/login_menu_item"
                android:orderInCategory="2"
                app:showAsAction="never"
                android:title="@string/log_in"
                android:icon="@drawable/login_icon"
                />

            <item
                android:id="@+id/logout_menu_item"
                android:orderInCategory="1"
                app:showAsAction="never"
                android:title="@string/log_out"
                android:icon="@drawable/logout_icon"/>
            <item
                android:id="@+id/orders_menu_item"
                android:orderInCategory="1"
                app:showAsAction="never"
                android:title="@string/orders"
                android:icon="@drawable/orders_icon"/>
        </menu>

    </item>



</menu>