<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/viewPagerFragment">

    <fragment
        android:id="@+id/navigation_tea"
        android:name="mosh.com.jera_v1.ui.main_page.TeaRecyclerViewFragment"
        android:label="@string/tea"
        tools:layout="@layout/fragment_tea">
        <action
            android:id="@+id/action_navigation_tea_to_teaItemFragment"
            app:destination="@id/navigation_tea_Item_screen" />

    </fragment>

    <fragment
        android:id="@+id/navigation_coffee"
        android:name="mosh.com.jera_v1.ui.main_page.CoffeeRecyclerViewFragment"
        android:label="@string/coffee"
        tools:layout="@layout/fragment_coffee">
        <action
            android:id="@+id/action_navigation_coffee_to_coffeeItemFragment"
            app:destination="@id/navigation_coffee_Item_screen" />
    </fragment>
    <fragment
        android:id="@+id/navigation_cart"
        android:name="mosh.com.jera_v1.ui.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart">

        <action
            app:destination="@id/navigation_checkout"
            android:id="@+id/navigate_to_checkout"
            app:launchSingleTop="true"/>
    </fragment>

    <action
        android:id="@+id/action_global_cart_fragment"
        app:destination="@id/navigation_cart"
        app:popUpTo="@id/navigation_cart"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="mosh.com.jera_v1.ui.forms.LoginFragment"
        android:label="@string/log_in"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/navigation_register"
            app:popUpTo="@id/navigation_register"
            app:popUpToInclusive="true" />
    </fragment>
    <action
        android:id="@+id/action_global_login_fragment"
        app:destination="@id/navigation_login"
        app:launchSingleTop="true"/>

    <fragment
        android:id="@+id/navigation_register"
        android:name="mosh.com.jera_v1.ui.forms.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register"/>


    <fragment
        android:id="@+id/navigation_coffee_Item_screen"
        android:name="mosh.com.jera_v1.ui.coffee_item.CoffeeItemFragment"
        android:label="@string/coffee" />

    <fragment
        android:id="@+id/navigation_tea_Item_screen"
        android:name="mosh.com.jera_v1.ui.tea_item.TeaItemFragment"
        android:label="@string/tea">
    </fragment>
    <fragment
        android:id="@+id/navigation_checkout"
        android:name="mosh.com.jera_v1.ui.checkout.CheckoutFragment"
        android:label="@string/check_out"
        tools:layout="@layout/fragment_checkout" >

    </fragment>
    <fragment
        android:id="@+id/viewPagerFragment"
        android:name="mosh.com.jera_v1.ui.main_page.ViewPagerFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_view_pager" />
<action
    android:id="@+id/global_navigation_to_main"
    app:destination="@id/viewPagerFragment"
    app:popUpTo="@id/viewPagerFragment"
    app:popUpToInclusive="true"
    app:launchSingleTop="true"/>

    <fragment
        android:id="@+id/fragmentOrders"
        android:name="mosh.com.jera_v1.ui.orders.OrdersFragment"
        android:label="Orders"
        tools:layout="@layout/fragment_orders" />
<action
    android:id="@+id/global_navigation_orders"
    app:destination="@id/fragmentOrders"
    app:popUpTo="@id/fragmentOrders"
    app:popUpToInclusive="true"
    app:launchSingleTop="true"/>

</navigation>
