<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="gone"
    tools:showIn="@layout/fragment_checkout">

    <include
        android:id="@+id/layout_default_address"
        layout="@layout/layout_def_address" />

    <RadioButton
        android:id="@+id/radioButton_new_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/add_address"
        android:visibility="gone" />

    <androidx.cardview.widget.CardView
        android:id="@+id/container_new_address"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="false"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_city_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/city"
                app:helperText="@string/required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="postalAddress"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_street_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:hint="@string/street_name"
                app:helperText="@string/required">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="postalAddress"
                    android:inputType="textPostalAddress" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_house_number_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:hint="@string/house_number"
                    app:helperText="@string/required">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_house_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="postalAddress"
                        android:inputType="textPostalAddress"
                        app:helperText="@string/required" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_zip_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:hint="@string/zip_code">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_zip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="postalAddress"
                        android:inputType="textPostalAddress"
                        app:helperText="@string/required" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_floor_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:hint="@string/floor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_floor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="postalAddress"
                        android:inputType="textPostalAddress" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_apartment_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:hint="@string/apt">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_apartment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="postalAddress"
                        android:inputType="textPostalAddress" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_entrance_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:hint="@string/entrance">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_entrance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints="postalAddress"
                        android:inputType="textPostalAddress" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <CheckBox
                android:id="@+id/button_use_as_default_address"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/use_this_address_as_default" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</LinearLayout>