<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_def_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_def_street_and_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:id="@+id/text_def_postal_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp" />

    <LinearLayout
        android:id="@+id/container_def_building_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp">

        <TextView
            android:id="@+id/text_def_entrance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entrance_label" />

        <TextView
            android:id="@+id/text_def_entrance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp" />

        <TextView
            android:id="@+id/text_def_floor_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/floor_label" />

        <TextView
            android:id="@+id/text_def_floor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp" />

        <TextView
            android:id="@+id/text_def_apartment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/apt_label" />

        <TextView
            android:id="@+id/text_def_apartment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp" />

    </LinearLayout>


</LinearLayout>


