<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_coffee_screen"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <include layout="@layout/layout_image_header"
                android:id="@+id/image_layout"/>


            <include
                android:id="@+id/title_row"
                layout="@layout/title_row" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <TextView
                    android:id="@+id/text_coffee_origin_country_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_of_origin_label"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/text_coffee_origin_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="Indonesia" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="380dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_coffee_taste_profile_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taste_profile_label"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/text_coffee_taste_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    tools:text="choclate, vanila , stuff" />


            </LinearLayout>

            <TextView
                android:id="@+id/text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                tools:text="asdfmdsa;lfads;l;asl asdadslfl;  ;lasl;   l;sa,dfxacvl,l;cz,;l,a ds;lgdfs;l sdf;lgsl;l;, l;df,g;l, ds;ldfsgdsg,ldsfl;g" />


            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toStartOf="@id/text_coffee_stock"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <include
                        android:id="@+id/rating_bitterness"
                        layout="@layout/rating_row" />

                    <include
                        android:id="@+id/rating_sweetness"
                        layout="@layout/rating_row" />

                    <include
                        android:id="@+id/rating_acidity"
                        layout="@layout/rating_row" />

                    <include
                        android:id="@+id/rating_body"
                        layout="@layout/rating_row" />


                </LinearLayout>

                <TextView
                    android:id="@+id/text_coffee_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Only 5 left!" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/text_coffee_quantity_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bag_size"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_coffee_quantity_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_coffee_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="end"
                        android:gravity="center"
                        android:inputType="numberDecimal"
                        android:imeOptions="actionDone"
                        android:text="@string/quantity_init" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/grind_type"
                    android:textSize="22sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/spinner_grind_level_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:layout_constraintTop_toBottomOf="@+id/scrollView_tea_description">

                    <AutoCompleteTextView
                        android:id="@+id/spinner_grind_level"
                        android:labelFor="@+id/spinner_grind_level_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:maxLines="1"
                        android:text="@string/beans" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <include
                android:id="@+id/buttons_row"
                layout="@layout/item_buttons_row" />


        </LinearLayout>
    </ScrollView>


</FrameLayout>
